# PrismCanvas

./: .gitignore  .gitmodules  CMakeLists.txt  CanvasEvaluation.md  README.md  build.bat  build.sh  clip_path_smoke.bat  clip_path_smoke.sh  examples_smoke.bat  examples_smoke.sh  main.cpp  regression_smoke.bat  regression_smoke.sh  smoke_test.bat  smoke_test.sh
benchmarks/: README.md
cmake/: PrismCanvasOpenGL.cmake  RunBuiltExecutableTest.cmake  RunScriptGate.cmake
doc/architecture/: ADR-001-library-first-modules.md  ADR-002-renderer-abstraction.md  ADR-003-text-architecture.md  ADR-004-validation-gates.md  README.md
doc/polyline/: polyline2d_interactive_tutorial.html  polyline2d_teaching_deepseek_flash.html  polyline2d_tutorial_deepseek_flash2.html  polyline2d_tutorial_gemini_3.1pro.html  polyline2d_tutorial_gpt_5.4.html
example/game/bubble_shooter/: BubbleShooter.cpp  CMakeLists.txt  build.bat  build.sh
example/game/racer/: CMakeLists.txt  Racer.cpp  build.bat  build.sh
example/game/tetris/: CMakeLists.txt  Tetris.cpp  build.bat  build.sh
include/: Vec2.h
src/: main.cpp
src/canvas/: Canvas.cpp  Canvas.h  Image.cpp  Image.h  Paint.cpp  Paint.h  Path.h  base.h
src/command/: Commands.h  DrawCommand.h  DrawData.h  DrawImage.cpp  DrawImage.h  DrawLines.cpp  DrawLines.h  DrawPath.cpp  DrawPath.h  DrawPoints.cpp  DrawPoints.h  DrawProgram.cpp  DrawText.cpp  DrawText.h
src/opengl/: GLProgram.cpp  GLProgram.h  GLTextureUtils.cpp  GLTextureUtils.h  GLVertexArray.cpp  GLVertexArray.h
src/render/: GraphicsState.h  GraphicsStateStack.h  IRenderDevice.h  IRenderTarget.h  IRenderer.h  OpenGLRenderDevice.cpp  OpenGLRenderDevice.h  RenderContext.cpp  RenderContext.h  RenderTypes.h  Renderer.cpp  Renderer.h
src/text/: BasicTextBackend.cpp  BasicTextBackend.h  ITextBackend.h  NativeText.cpp  NativeText.h  TextUtils.cpp  TextUtils.h
tests/: GraphicsStateStackTests.cpp  README.md
